--- a/q/274061.html
+++ b/q/274061.html
@@ -26,23 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>Bash</td><td>240711T080538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274076#274076">Themooni</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Nibbles</td><td>240712T151449Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274131#274131">Dominic </a></td></tr>
-<tr d-ix="2"><td>023</td><td>QuadR i</td><td>240711T062145Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274072#274072">Ad&#225;</a></td></tr>
-<tr d-ix="3"><td>035</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
-<tr d-ix="4"><td>062</td><td>Python</td><td>240711T130805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274081#274081">pajonk</a></td></tr>
-<tr d-ix="5"><td>110</td><td>Go</td><td>240711T151242Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274086#274086">bigyihsu</a></td></tr>
-<tr d-ix="6"><td>060</td><td>Lexurgy</td><td>240711T150341Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274085#274085">bigyihsu</a></td></tr>
-<tr d-ix="7"><td>033</td><td>Ruby</td><td>240711T081015Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274077#274077">int 21h </a></td></tr>
-<tr d-ix="8"><td>044</td><td>Java</td><td>240711T082106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274078#274078">Kevin Cr</a></td></tr>
-<tr d-ix="9"><td>024</td><td>05AB1E</td><td>240711T074131Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274075#274075">Kevin Cr</a></td></tr>
-<tr d-ix="10"><td>024</td><td>Charcoal</td><td>240711T063055Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274074#274074">Neil</a></td></tr>
-<tr d-ix="11"><td>047</td><td>R</td><td>240711T055300Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274070#274070">pajonk</a></td></tr>
-<tr d-ix="12"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
-<tr d-ix="13"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
-<tr d-ix="14"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
+<tr d-ix="0"><td>027</td><td>AWK vIGNORECASE=1</td><td>240718T130032Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274242#274242">corvus_1</a></td></tr>
+<tr d-ix="1"><td>047</td><td>Bash</td><td>240711T080538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274076#274076">Themooni</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Nibbles</td><td>240712T151449Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274131#274131">Dominic </a></td></tr>
+<tr d-ix="3"><td>023</td><td>QuadR i</td><td>240711T062145Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274072#274072">Ad&#225;</a></td></tr>
+<tr d-ix="4"><td>035</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
+<tr d-ix="5"><td>062</td><td>Python</td><td>240711T130805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274081#274081">pajonk</a></td></tr>
+<tr d-ix="6"><td>110</td><td>Go</td><td>240711T151242Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274086#274086">bigyihsu</a></td></tr>
+<tr d-ix="7"><td>060</td><td>Lexurgy</td><td>240711T150341Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274085#274085">bigyihsu</a></td></tr>
+<tr d-ix="8"><td>033</td><td>Ruby</td><td>240711T081015Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274077#274077">int 21h </a></td></tr>
+<tr d-ix="9"><td>044</td><td>Java</td><td>240711T082106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274078#274078">Kevin Cr</a></td></tr>
+<tr d-ix="10"><td>024</td><td>05AB1E</td><td>240711T074131Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274075#274075">Kevin Cr</a></td></tr>
+<tr d-ix="11"><td>024</td><td>Charcoal</td><td>240711T063055Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274074#274074">Neil</a></td></tr>
+<tr d-ix="12"><td>047</td><td>R</td><td>240711T055300Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274070#274070">pajonk</a></td></tr>
+<tr d-ix="13"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
+<tr d-ix="14"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
+<tr d-ix="15"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 47 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gawk/" rel="nofollow noreferrer">AWK</a> <code>-vIGNORECASE=1</code>, 27 bytes</h1>
+<pre><code>$0=/^11$|^h?[oó8]/?&quot;u&quot;:&quot;o&quot;
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=LY6xCsIwGIT3e4zgKhoEKYKISLEuRhRxKC0EG42a9ododXHwPVwEcXC1m459Ct_GiMLxwcHHceerPGweIavuB_2hGPu97sRvcxZdbvluUfVelXq7FnNeOca6E1JZeFGtw3LWYsR-xl-8vE_SqLXMEkvg4JyjiVQaBOXdkkJP05yM3CnMyCaDzM-WZrXVGEnn55giyF3UlhxTh_KZqoRARn1LYe3KNa_RgOe2oclmBC2shJgIEAQC-h35AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 47 bytes</h1>
 <p>-2 bytes by @Fmbalbuena with golfed regex</p>
 <pre class="lang-bash prettyprint-override"><code>grep -qiE '^h?[oó8]|^11$'&lt;&lt;&lt;$1&amp;&amp;echo u||echo o
 </code></pre>
@@ -54,7 +60,7 @@
                                 &amp;&amp;echo u||echo o #if match, output u, o otherwise.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 41 nibbles (20.5 bytes)</h1>
+<div id="pu2" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 41 nibbles (20.5 bytes)</h1>
 <pre><code>? + ? `D256 o/-.$`)$&quot;H&quot;$ ==$&quot;11&quot; &quot;u&quot; &quot;o&quot; 384fd3
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN_XtFbQV7BUSXIxMzRTy9XX1VBI0VZQ8lFQUbG1VlAwNlRSUSoE4X0nB2MIkLcUYog2qe020UozS4c3lOTFKSrELuSCCAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -73,7 +79,7 @@
                               &quot;o&quot; #    output &quot;o&quot;
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a> <code>i</code>, <s>24</s> 23 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a> <code>i</code>, <s>24</s> 23 bytes</h1>
 <p>−1 thanks to Fmbalbuena.</p>
 
 <pre class="lang-none prettyprint-override"><code>^(11$|h?[oó8]).*
@@ -90,14 +96,14 @@ o
 <p>then we replace it and anything that follows it (<code>.+</code>) with a &quot;u&quot;.</p>
 <p>Everything else (<code>.+</code>) we replace with an &quot;o&quot;.</p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 35 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES6), 35 bytes</h1>
 <p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/106959/fmbalbuena">Fmbalbuena</a></em></p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;&quot;ou&quot;[+/^h?[oó8]|^11$/i.test(s)]
 </code></pre>
 <p><a href="https://tio.run/##jdLPasIwGADwu09RPnZokVmKMLzoDmPQnToYY4euQmijraT5RtLs5At59rZrH6wTUdGmMckpJD@@f8mG/BKZi@qneeRY0G417@R8AaggHYfL8jnFdj/LtssoegirSUNl48sg63LkEhmdMFz7kGIGwej6aOUDYXRDeCEQvMMKAi8MPeyj6Hh5XiYUXTMDenKJVBNmjxS3O4EULOqlxBwZaei99r5QFG/8la9ZJUswoHdymtG9dMqlvU8XFN@EMiIqEayothcet381LS7urG4YfPNUDXyhw1ZLoPQEeyGqSwaDmk2n2svraGB@Sv@NYEclCt6fn44SQaztJR@JvXB0KTxxQTEOdNf9Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>64</s> 62 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>64</s> 62 bytes</h1>
 <p><em>Edit: -2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a>.</em></p>
 <pre class="lang-python prettyprint-override"><code>lambda s:re.match(&quot;^h?[oó]|^11$|^8&quot;,s,2)and&quot;u&quot;or&quot;o&quot;
 import re
@@ -105,7 +111,7 @@ import re
 <p><a href="https://ato.pxeger.com/run?1=fZPBSsQwEIYP3vYpyuihhVWpC1IE9SBCPVUQ8dBuIW5TU2kzJU0Owr6Jl4IoeN6b1z6FPo2LrWtNt5lLSL7Mzz8zyfNb-SQZ8volPY1elUz3vc-znBT3CbGqE0EPCiIXzIaYnYfYrObL2HX3lrEH02p65BCegAIUgDDJihKFtARtVb52DkuRcWlDiPOIgzNpt6kNJKeP60yBYK3DcaxdC_-o-3P6GwPq9rlOj425BckNuX7zLpDCGL5guMCcSLrV9B2K5Ipf8oc8qxjo9Jp0tW5VVkbTt0bq_0seUlrhaEW-Kgyu_OajoMnmQoc7DhEPlTZVzKkup_pyKyGyjZ6OvdlMH02fDnug-k9i0IMeZSi41oM-DQQZNx3cBAZXaHQVGKmPQ8_tv6nrdv0G" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 110 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 110 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;regexp&quot;
 func f(s string)string{o:=&quot;o&quot;
 if b,_:=MatchString(`(?i)^h?[oó]|^11$|^8`,s);b{o=&quot;u&quot;}
@@ -114,7 +120,7 @@ return o}
 <p><a href="https://ato.pxeger.com/run?1=VVJNT-MwEJU4-lcMFkiJZCpFSKjqyiAESOUARduiPQAFkzofkNjBcSRQml-ylwqJA-feuPZXsL9mnYZdm0tm3vObeRPN_H6N5eKjYOEjiznkLBUIpXkhle7hKNf4rdLRTv9T_OMUj_lzgVFUiRAir4RSq1TEfhdqOaBYYpRGcE9uB_SM6TAZr5-8O-8g9afJwZVcLW_m0yDYmk_7d6T0f9zXkuIKN0hxXSkBsulc_2yc65eCw6Q1qUJdp6Igxv3Ls0HdFO3Qng810iUMKFzdTGpUY5bxByZmSmJiJmqIoVbLjLew6qBURmHhcLVUKp05gv7urgNsGgRObtsHgQP2bJqzzIJEKuFYJCP1bYR3JbkVHyUylBnTDvVLqtmpOBFxlpaJpUfjkW1zwdy_dtwqp8Cyl5YdOuKhox5WvJQuzF20-sj57D9h1nJh1qMz4WFK6Xhy-HNiIvZRJBXcEt0uSTFhzs0srEYsXDORp3tmv357O7rXbnmTQvtWw7pd5OHtJ6D7YL7e9pN_LTCBdQlpZaQr8qExA7j-cHJ-DJ3_11ktFl38Cw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Uses the case-insensitive regexp that everyone else is using.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.lexurgy.com/sc" rel="nofollow noreferrer">Lexurgy</a>, 60 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.lexurgy.com/sc" rel="nofollow noreferrer">Lexurgy</a>, 60 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>r:
 {{{h,H}? {o,ó,O,Ó}},\8} []*=&gt;u/$ _
 \11=&gt;u/$ _ $
@@ -127,7 +133,7 @@ return o}
 []+=&gt;o                             # everything else is o
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <a href="https://ato.pxeger.com/run?1=NZDBSsQwEIbxug8hoXhwobtLWZAidHsQYT1VEPFQWogmNVnSjCQNVFx9ES9F9OC5N699Cn0aS6Z7-b9__mGGZN4_jbt_7j6q5Ms11SL-nS829uXUJm-rUqQ5DH2xL6PoZF_GKzlfaqnSlKRwnrpXHPg7Oq7AkJZITfJZQBXfUc0MBCScBUOvODowY-7dduiNkQzjeL1Geo0ixFQgz7zWVHkKMBpHRWYOC78NcG8vBDyAog1Wd2DYlb7Uj0pa4ZPsJvO8ptMDUR02vd7iTmxs3QRuD0E9meGn5uMnCsKAPLnGkrwNA5JsSBBWeVsUyx2MF-Ga4Zm6DvkP" rel="nofollow noreferrer"><s>41</s></a> 33 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <a href="https://ato.pxeger.com/run?1=NZDBSsQwEIbxug8hoXhwobtLWZAidHsQYT1VEPFQWogmNVnSjCQNVFx9ES9F9OC5N699Cn0aS6Z7-b9__mGGZN4_jbt_7j6q5Ms11SL-nS829uXUJm-rUqQ5DH2xL6PoZF_GKzlfaqnSlKRwnrpXHPg7Oq7AkJZITfJZQBXfUc0MBCScBUOvODowY-7dduiNkQzjeL1Geo0ixFQgz7zWVHkKMBpHRWYOC78NcG8vBDyAog1Wd2DYlb7Uj0pa4ZPsJvO8ptMDUR02vd7iTmxs3QRuD0E9meGn5uMnCsKAPLnGkrwNA5JsSBBWeVsUyx2MF-Ga4Zm6DvkP" rel="nofollow noreferrer"><s>41</s></a> 33 bytes</h1>
 <ul>
 <li>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/92901/dingus">Dingus</a></li>
 </ul>
@@ -138,7 +144,7 @@ return o}
 <p><em>(The following comment refers to the previous 41-byte version)</em></p>
 <p>What I like here, is how three question marks appear together (alas, a space cannot be removed), each one having a different role: the first one is a part of the boolean expression that checks whether a value is <code>nil</code>, the second one belongs to the ternary operator and the last one is a shortcut for <code>'o'</code>.</p>
 </div>
-<div id="pu8" class="pu"><h1>Java, 44 bytes</h1>
+<div id="pu9" class="pu"><h1>Java, 44 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>s-&gt;s.matches(&quot;(?i)11|(8|h?[oó]).*&quot;)?'u':'o'
 </code></pre>
@@ -166,7 +172,7 @@ return o}
                   .*    #   Followed by 0 or more additional characters
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 24 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 24 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>„ouIl'hæ„óoâJ8ªÅ?àI11Q~è
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//UcO8/FLPHPWMw8uAzMOb8w8v8rI4tOpwq/3hBZ6GhoF1h1f8/29oCAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKS/f9HDfPySytz1DMOLwMyD2/OP7zIy@LQqsOt9ocXVBoaBtYdXvFf53@0UmJOalZiXkpRvpKO0uHNOakgOr8IKAakPQ5vLirKTAEJWRgbg0ggNjQEEWAGiDQD4tzEHCCZkV@UB1Ka4V8E0byyKD8VyHDOyE/Oz0ksAbHD84tSPPNc89JzMoszgHz/YH8gGZAIth6ES0GCQBwKMgEk4FEKJlKLIZxcMHV4V24q0FmxAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -191,7 +197,7 @@ I               # Push the input-string again
                 # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
 <pre><code>§uo∧⁻Ｎ¹¹⬤8oó⬤θ⌕↧θ⁺…hμι
 </code></pre>
 <p><a href="https://tio.run/##JYtNCsMgEIWvElxNwC6yK3QlgdJAW3IFq4LCxEmM9udcOUIOZgfyFo/H4/uM18mQxlrHFGIGlYdo3RdEISEbFS08QiwrDHEu@Vmml0vQyqbruBQiiDPtmzj2IptrYONOH5eMXh0sTI3Iev8z6HpPMwjP9MR/aI9car3tW0rBUj298Q8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -217,13 +223,13 @@ I               # Push the input-string again
 </code></pre>
 <p>Note that the version of Charcoal on TIO mistakenly counts <code>ó</code> as one byte but the version on ATO gets it right, or you can add the <code>-x</code> flag which produces an <code>xxd</code> style dump showing the correct number of bytes.</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 47 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 47 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(s)`if`(grepl(&quot;^h?[oó]|^11$|^8&quot;,s,T),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fZOxTsMwEIYHtj5FdTDYIghFlVAWxICQwhQkQAxJo1qN0wQ5vsqJt74JS0BiYO7GmqeApylqSglOYy-W_Pn_9d-d_fKq6rf08l1X6Zn3dR6Rks7ydEYWii8FgTi7CrFZT1ex656sYg-c0nmgDmhwAIG2su-j0zmrCIQ4jSTQ0VLlsiIpASb4M5OJQhj_LErHx2P8o-729Hf1qNvlJr2wagsmLFq_-VDIYQhfZzhHwSp-MPQTquRW3siFyMsMTHrHdrUedNbW0I9W6v8T9ykvcbAiXxeWVH7zWfBkf2GHR9uJRjLUxkxRcNNMd83WSuV7NxN7k4k5mC7td0B3H0SvAx2aoZJGB7o0UGw4dHAfWFKhNVVgpT72M7d_pq7bfQM" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 26 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 26 bytes</h1>
 <pre><code>Mi`^11$|^8|^h?[oó]
 T`d`\ou
 </code></pre>
@@ -235,14 +241,14 @@ T`d`\ou
 </code></pre>
 <p>Index that into the string <code>ou</code>. (<code>o</code> is magic in transliteration mode so it needs to be quoted to be literal. <code>d</code> is also magic, being a byte shorter than writing <code>01</code>.)</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:'ou'[s.strip('hH')[:1]in[*'oóOÓ']or'8'==s[:1]or'11'==s]
 </code></pre>
 <p>The list unpacking could be removed (-3 bytes) if strings matching <code>/^[hH]*$/g</code> could output <code>'u'</code> instead of <code>'o'</code>.</p>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYSj2/VD26WK@4pCizQEM9w0NdM9rKMDYzL1pLPf/wZv/Dk9Vj84vULdRtbYtBEkC2oSGIE/u/oCgzr0QjTUPd4/DmoqLMlHx1Tc3/AA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu14" class="pu"><h1>Google Sheets, 49 bytes</h1>
+<div id="pu15" class="pu"><h1>Google Sheets, 49 bytes</h1>
 <pre><code>=if(regexmatch(A1,&quot;(?i)^h?[oó]|^11$|^8&quot;),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p>Put the string in cell <code>A1</code> and the formula in <code>B1</code>. Expects that the data is text strings as specified in the question (<strong>Format &gt; Number &gt; Plain text</strong>). Uses <a href="https://codegolf.stackexchange.com/a/274064/119296">Arnauld's regex</a>.</p>
